fix: adjust gap spacing in Side-Bar-Card-Hover for improved layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@
     @apply flex flex-col gap-y-1;
   }
   .Side-Bar-Card-Hover {
-    @apply flex items-center gap-x-3 transition-all;
+    @apply flex items-center gap-x-2 transition-all;
   }
   /* Side-Bar */
 
